Made it where all created units are initialized on the board. Fixed code logic to handle multiple units instead of singular. Made it where units are obstacles so there is no unit overlap. Along with more changes.

--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ body {
   height: 140%;
 
   /* Use whole spritesheet as the background */
-  background-image: url("assets/Knight_1/Idle.png");
+  background-image: var(--sprite-url);
 
   background-repeat: no-repeat;
 
